WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
107590
[BlackBerry] GIF & RAF animations sometimes don't resume after zoom
https://bugs.webkit.org/show_bug.cgi?id=107590
Summary
[BlackBerry] GIF & RAF animations sometimes don't resume after zoom
Andrew Lo
Reported
2013-01-22 14:48:55 PST
Render jobs are queued by the animation, but after a zoom is over, WK thread is not dispatched to perform those jobs.
Attachments
Patch
(1.52 KB, patch)
2013-01-22 14:55 PST
,
Andrew Lo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andrew Lo
Comment 1
2013-01-22 14:55:10 PST
Created
attachment 184054
[details]
Patch
Rob Buis
Comment 2
2013-01-22 15:00:45 PST
Comment on
attachment 184054
[details]
Patch LGTM.
WebKit Review Bot
Comment 3
2013-01-22 15:15:28 PST
Comment on
attachment 184054
[details]
Patch Clearing flags on attachment: 184054 Committed
r140477
: <
http://trac.webkit.org/changeset/140477
>
WebKit Review Bot
Comment 4
2013-01-22 15:15:32 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug