[BlackBerry] GIF & RAF animations sometimes don't resume after zoom https://bugs.webkit.org/show_bug.cgi?id=107590

Patch by Andrew Lo <anlo@rim.com> on 2013-01-22
Reviewed by Rob Buis.
Internally reviewed by Jakob Petsovits.

Internal PR 276907.
Dispatch render jobs when resuming backing store updates to perform jobs
queued when updates were suspended.

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::resumeBackingStoreUpdates):

Canonical link: https://commits.webkit.org/125822@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140477 268f45cc-cd09-0410-ab3c-d52691b4dbfc